--- a/deco.css
+++ b/deco.css
@@ -31,14 +31,22 @@ header {
     justify-content: space-between;
     margin-bottom: 10px;
 }
-  
+
+.task-description p {
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+}  
+
 .task-list {
     max-height: 500px; /* Adjust the height as needed */
     height: 500px;
+    max-width: 1000px;
     overflow-y: auto;
     padding: 5px;
     border: 3px solid rgb(102, 49, 0);
     border-radius: 10px;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
 }
 
 .task-content {
@@ -53,11 +61,15 @@ header {
 
 .timestamp {
     margin-left: auto;
+    white-space: nowrap;
 }
   
 .task {
     padding: 2px;
     border-bottom: 1px solid #ccc; /* Add a thin bottom border to separate the tasks */
+    overflow-wrap: break-word;
+    word-break: break-word;
+    hyphens: auto;
 }
   
 .task:last-child {
