--- a/deco.css
+++ b/deco.css
@@ -1,19 +1,24 @@
+@import url("https://fonts.googleapis.com/css2?family=Righteous&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@500&display=swap');
+
 body {
     margin: 0;
     padding: 0;
-    background-color: rgb(173, 99, 1);
+    background: rgb(12, 19, 79);
+    font-family: "Righteous", 'IBM Plex Sans', sans-serif;
 }
   
 header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    border-bottom: 3px solid rgb(102, 49, 0);
+    border-bottom: 5px solid rgb(29, 38, 125);
 }
 
 .header-left > h1 {
-    font-size: 24px;
-    margin: 20px 0px 20px 10px;
+    font-size: 36px;
+    margin: 10px 0px 10px 10px;
+    color: white;
 }
 
 .header-right {
@@ -43,10 +48,11 @@ header {
     max-width: 1000px;
     overflow-y: auto;
     padding: 5px;
-    border: 3px solid rgb(102, 49, 0);
+    border: 3px solid rgb(73, 66, 228);
     border-radius: 10px;
     word-wrap: break-word;
     overflow-wrap: break-word;
+    font-family: 'IBM Plex Sans', sans-serif;
 }
 
 .task-content {
@@ -54,14 +60,32 @@ header {
     align-items: center;
     gap: 10px;
 }
+
+.task-content > p {
+    color: rgb(218, 223, 252);
+}
   
 .checkmark {
     margin-right: 10px;
 }
 
+.edit-task > img {
+    color: #999;
+    margin-left: 5px;
+    height: 20px;
+    width: 20px;
+    cursor: pointer;
+  }
+  
+  .task-content:hover .edit-icon {
+    color: #555;
+  }
+  
+
 .timestamp {
     margin-left: auto;
     white-space: nowrap;
+    color: rgb(134, 150, 254);
 }
   
 .task {
@@ -77,15 +101,41 @@ header {
 }
   
 .btn {
+    font-family: 'IBM Plex Sans', arial;
     padding: 8px 16px;
-    font-size: 14px;
-    background-color: #333;
-    color: #fff;
-    border: none;
-    border-radius: 4px;
     cursor: pointer;
+    color: #DDFCFE !important;
+    font-size: 14px;
+    text-shadow: 0px 0px 0px #FFFFFF;
+    box-shadow: 0px 0px 0px #FFFFFF;
+    padding: 10px 25px;
+    border-radius: 40px;
+    border: 2px solid #6554AF;
+    background: #6554AF;
 }
+.btn:hover {
+  color: #DDFCFE !important;
+  background: #468CCF;
+  border: 2px solid #468CCF;
+}
+
+.task-btn {
+    font-family: 'IBM Plex Sans', arial;
+    color: #DDFCFE !important;
+    font-size: 14px;
+    text-shadow: 0px 0px 0px #DDFCFE;
+    box-shadow: 0px 0px 0px #BEE2F9;
+    padding: 7px 12px;
+    border-radius: 40px;
+    border: 2px solid #3866A3;
+    background: #6554AF;
+  }
+  .task-btn:hover {
+    color: #DDFCFE !important;
+    background: #468CCF;
+  }
   
+
 .add-task-btn {
     margin: 10px 0px 0px 0px;
 }
